<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical"
    android:background="@color/colorDialog">

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:textColorHint="@color/colorAccent"
        android:textSize="12dp"
        android:inputType="text"
        android:textStyle="italic"
        android:maxLines="1"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>

    <EditText
        android:id="@+id/enter_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_artist"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="24dp"
        android:textSize="12dp"
        android:inputType="text"
        android:maxLines="1"
        android:textStyle="italic"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/enter_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_genre"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="24dp"
        android:textSize="12dp"
        android:inputType="text"
        android:maxLines="1"
        android:textStyle="italic"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/enter_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_duration"

        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="24dp"
        android:textSize="12dp"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:textStyle="italic"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/enter_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_rate"

        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="24dp"
        android:textSize="12dp"
        android:inputType="number"
        android:maxLines="1"
        android:textStyle="italic"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/enter_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="24dp"
        android:textSize="12dp"
        android:inputType="text"
        android:textStyle="italic"
        android:maxLines="4"
        android:ems="100"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>
    <EditText
        android:id="@+id/enter_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_link"
        android:textColorHint="@color/colorAccent"
        android:layout_marginTop="24dp"
        android:textSize="12dp"
        android:inputType="text"
        android:maxLines="1"
        android:textStyle="italic"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorBlack"
        android:padding="12dp"/>

</LinearLayout>
